--- a/Maze/view.ui
+++ b/Maze/view.ui
@@ -16,9 +16,9 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="file_name">
       <property name="text">
-       <string> </string>
+       <string>file_name</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -26,9 +26,9 @@
      </widget>
     </item>
     <item row="1" column="0">
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="OpenFIle">
       <property name="text">
-       <string>PushButton</string>
+       <string>OpenFile</string>
       </property>
      </widget>
     </item>
